Perkin-UAT/force-app/main/default/objects/Integration_Inventory__c/Integration_Inventory__c.object-meta.xml
<CustomObject>
    <description>Purpose: To inventory and report on integrations into/out of Salesforce.</description>
    <label>Integration Inventory</label>
    <nameField>
        <displayFormat>INT-{0000}</displayFormat>
        <label>Integration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>