Perkin-UAT/force-app/main/default/objects/Integration_Inventory__c/fields/Application_Integration_Name__c.field-meta.xml
<CustomField>
    <fullName>Application_Integration_Name__c</fullName>
    <label>Application Integration Name</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>