Perkin-UAT/force-app/main/default/objects/Integration_Inventory__c/fields/Service_Account__c.field-meta.xml
<CustomField>
    <fullName>Service_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service Account</label>
    <referenceTo>Service_Account_Inventory__c</referenceTo>
    <relationshipLabel>Integrations</relationshipLabel>
    <relationshipName>Integrations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>