Perkin-UAT/force-app/main/default/objects/Integration_Inventory__c/fields/Service_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Account_Name__c</fullName>
    <formula>Service_Account__r.Service_Account_Name__c</formula>
    <label>Service Account Name</label>
    <type>Text</type>
</CustomField>