Perkin-UAT/force-app/main/default/objects/Integration_Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Application_Integration_Name__c</columns>
    <columns>Business_Owner__c</columns>
    <columns>Data_Direction__c</columns>
    <columns>Integration_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>